[lworld] find_callee_info_helper hits "must have non-abstract attached method" assert

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/runtime/sharedRuntime.cpp:1204), pid=575065, tid=575066
      # assert(attached_method.not_null() && !attached_method->is_abstract()) failed: must have non-abstract attached method
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-03-1240228.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-03-1240228.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x18f5159] SharedRuntime::find_callee_info_helper(vframeStream&, Bytecodes::Code&, CallInfo&, JavaThread*)+0xce9

      Stack: [0x00007f94e1322000,0x00007f94e1423000], sp=0x00007f94e141a440, free space=993k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x18f5159] SharedRuntime::find_callee_info_helper(vframeStream&, Bytecodes::Code&, CallInfo&, JavaThread*)+0xce9 (sharedRuntime.cpp:1204)
      V [libjvm.so+0x18f5ab3] SharedRuntime::find_callee_method(JavaThread*)+0xa3 (sharedRuntime.cpp:1284)
      V [libjvm.so+0x18f5e8a] SharedRuntime::reresolve_call_site(bool&, bool&, bool&, JavaThread*)+0xda (sharedRuntime.cpp:1992)
      V [libjvm.so+0x18f65c0] SharedRuntime::handle_wrong_method(JavaThread*)+0x1f0 (sharedRuntime.cpp:1586)
      v ~RuntimeStub::wrong_method_stub 0x00007f94d901a81b
      J 1089 c1 compiler.valhalla.inlinetypes.TestValueClasses.test22(Lcompiler/valhalla/inlinetypes/TestValueClasses$ManyOopsValue;)I (5 bytes) @ 0x00007f94d9558924 [0x00007f94d9556d00+0x0000000000001c24]
      j compiler.valhalla.inlinetypes.TestValueClasses.test22_verifier()V+3
      J 1066 c1 java.lang.invoke.LambdaForm$DMH+0x0000000800081400.invokeVirtual(Ljava/lang/Object;Ljava/lang/Object;)V java.base (14 bytes) @ 0x00007f94d9536914 [0x00007f94d9536520+0x00000000000003f4]
      j java.lang.invoke.LambdaForm$MH+0x0000000800123800.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+38 java.base
      J 1065 c1 compiler.lib.ir_framework.test.CustomRunTest.invokeTest()V (79 bytes) @ 0x00007f94d9529064 [0x00007f94d951fd00+0x0000000000009364]
      j compiler.lib.ir_framework.test.AbstractTest.run()V+23
      j compiler.lib.ir_framework.test.CustomRunTest.run()V+59
      j compiler.lib.ir_framework.test.TestVM.runTests()V+198
      j compiler.lib.ir_framework.test.TestVM.start()V+9
      j compiler.lib.ir_framework.test.TestVM.main([Ljava/lang/String;)V+38
      v ~StubRoutines::call_stub 0x00007f94d9000d21
      V [libjvm.so+0x10687ad] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x56d (javaCalls.cpp:445)
      V [libjvm.so+0x11ad055] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x375 (jni.cpp:902)
      V [libjvm.so+0x11b0f45] jni_CallStaticVoidMethod+0x1b5 (jni.cpp:1771)
      C [libjli.so+0x47d5] JavaMain+0xd55 (java.c:547)
      C [libjli.so+0x7a09] ThreadJavaMain+0x9 (java_md.c:650)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: