8295455: [lworld] find_callee_info_helper hits "must have non-abstract attached method" assert